  $wgUseSameSiteLegacyCookies. It will emit deprecation warnings. Use
  WebRequest::getCookie().
* Using the array_merge_recursive merge strategy in extension.json and skin.json
  has been hard deprecated.
* DBAccessObjectUtils::getDBFromIndex() is now deprecated, use
  ::getDBFromRecency() instead.
* Many Xml methods that are specific to HTML but not XML are deprecated:
  - Xml::buildForm
  - Xml::check
  - Xml::checkLabel
  - Xml::fieldset
  - Xml::input
  - Xml::inputLabel
  - Xml::inputLabelSep
  - Xml::label
  - Xml::option
  - Xml::password
  - Xml::radio
  - Xml::radioLabel
  - Xml::span
  - Xml::submitButton
  - Xml::textarea
  has been hard deprecated
* IMaintainableDatabase::truncate() has been deprecated. Use truncateTable()
  instead.
* TextConflictHelper->incrementStatsByUserEdits() is now deprecated.  The
  action this function previously handled should be moved into
  incrementConflictStats() and incrementResolvedStats().
* SQLPlatform::getQueryVerb() is now deprecated.
* …

=== Other changes in 1.42 ===
* Gallery: Image captions are no longer wrapped in <p> tags. Skins that
  customize rendering for galleries may need to tweak their CSS.
* Scripts under maintenance/dev/, for quickly setup a local MediaWiki for
  development purposes, have been removed, see DEVELOPERS.md for alternatives.
* …

== Compatibility ==

MediaWiki 1.42 requires PHP 7.4.3 or later and the following PHP extensions:

* ctype
* dom
* fileinfo
* iconv
* intl
* json
* mbstring
* xml

MariaDB is the recommended database software. MySQL, PostgreSQL, or SQLite can
be used instead, but support for them is somewhat less mature.

The supported versions are:

* MariaDB 10.3 or higher
* MySQL 5.7.0 or higher
* PostgreSQL 10 or later
* SQLite 3.8.0 or later

== Online documentation ==
Documentation for both end-users and site administrators is available on
MediaWiki.org, and is covered under the GNU Free Documentation License (except