@@ -132,6 +132,7 @@ class XmlTest extends MediaWikiIntegrationTestCase {
 	 * @dataProvider provideMonthSelector
 	 */
 	public function testMonthSelector( $expected, $selected, $allmonths, $id ) {
+		$this->hideDeprecated( 'Xml::monthSelector' );
 		$this->assertEquals(
 			$expected,
 			Xml::monthSelector( $selected, $allmonths, $id )
@@ -155,6 +156,9 @@ class XmlTest extends MediaWikiIntegrationTestCase {
 		if ( $nextMonth == 13 ) {
 			$nextMonth = 1;
 		}
+
+		$this->hideDeprecated( 'Xml::dateMenu' );
+		$this->hideDeprecated( 'Xml::monthSelector' );
 
 		$this->assertEquals(
 			'<label for="year">From year (and earlier):</label> ' .
@@ -288,6 +292,8 @@ class XmlTest extends MediaWikiIntegrationTestCase {
 	}
 
 	public function testLanguageSelector() {
+		$this->hideDeprecated( 'Xml::languageSelector' );
+
 		$select = Xml::languageSelector( 'en', true, null,
 			[ 'id' => 'testlang' ], wfMessage( 'yourlanguage' ) );
 		$this->assertEquals(
